--- a/index.html
+++ b/index.html
@@ -315,7 +315,7 @@
 <div class="line"><span>The ancient haunts well-loved that once it knew.</span></div>
 <div class="line"><span>And when it touched the shallows I did bear</span></div>
 <div class="line"><span>The dying Arthur as he bade, and there</span></div>
-<div class="line"><span class="top" id="page-16" title="16"> </span><span>I placed him ’mid dark forms: I could not tell</span></div>
+<div class="line"><span>I placed him ’mid dark forms: I could not tell</span></div>
 <div class="line"><span>Whose they might be; and wept, and breathed farewell.”</span></div>
 </div>
 <div class="line-block outermost">
@@ -629,7 +629,6 @@
 <div class="line"><span>With bright hues, and you still may read and see.</span></div>
 </div>
 <div class="clearpage">
-</div>
 </div>
 </div>
 <div class="level-2 section" id="ii-first-poems">
@@ -979,7 +978,7 @@
 <div class="line"><span>    And draws him on, and points the way.</span></div>
 </div>
 <div class="align-None container margin transition">
-<p class="center pfirst"><span>――――</span></p>
+<p class="center pfirst"><span></span></p>
 </div>
 <div class="line-block outermost">
 <div class="line"><span>We praise, we praise the immortal dead.</span></div>
